--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,5 @@
 haribol=harihari
+gateway.ip=192.168.1.171
+token.expiry.time=100000
+token.secret.key=asdfghjkl0987654321
+custom_login.url.path=/users/login
