--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,9 @@ gateway.ip=192.168.1.171
 token.expiry.time=100000
 token.secret.key=asdfghjkl0987654321
 custom_login.url.path=/users/login
+users.registration.path=/users-ms/users
+users.login.path=/users-ms/users/login
+users.h2console.path=/users-ms/users/h2-console/**
+authorization.token.header.name= Authorization
+authorization.token.header.prefix=Bearer
+token.secret.key=asdfghjkl0987654321
